fixed marketing slider on small windows, game setup name tweaked, keyword bar resized

--- a/app/assets/stylesheets/external/_demo.css.scss
+++ b/app/assets/stylesheets/external/_demo.css.scss
@@ -8,7 +8,7 @@
     border-top:0;
     color:$orange;
     font-size:1.5em;
-    font-weight:300;
+    font-weight:600;
     margin:.5em 0;
     padding-left:0;
     width:100%;
