--- a/app/assets/stylesheets/internal/directory.css.scss
+++ b/app/assets/stylesheets/internal/directory.css.scss
@@ -1,4 +1,4 @@
-#search_string {padding:.75em;}
+#search_string {padding:.74em;}
 #search {
     height:37px;
     &:after{@include clear;}
