--- a/app/assets/stylesheets/internal/mast.css.scss
+++ b/app/assets/stylesheets/internal/mast.css.scss
@@ -120,12 +120,13 @@ body.users-index .nav-directory:before {background-position:-83px -21px!importan
             border:$border-dark;
             color:$orange;
             font-weight:700;
+            height:39px;
             margin:0;
             outline:0;
-            padding:.95em;
+            padding:.93em;
             text-transform: uppercase;
             width:268px;
-            &:focus {border:1px $orange solid;}
+            &:hover, &:focus {border:1px $orange solid;}
         }
         .button_wrap {
             @include square-button-wrap($gray);
@@ -136,8 +137,9 @@ body.users-index .nav-directory:before {background-position:-83px -21px!importan
             cursor:pointer;
             font-size:1em;
             font-weight: 700;
+            height:37px;
             margin:0;
-            padding:.87em;
+            padding:0 .87em;
             text-transform: uppercase;
         }
     }
